; ModuleID = '/home/carl/AnghaBench/php-src/ext/sodium/extr_libsodium.c_sodium_exception_create_object.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/sodium/extr_libsodium.c_sodium_exception_create_object.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* (i32*)* }

@zend_ce_exception = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @sodium_exception_create_object to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @sodium_exception_create_object(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @zend_ce_exception, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32* (i32*)*, i32* (i32*)** %5, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i32* %6(i32* %7)
  store i32* %8, i32** %3, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @sodium_remove_param_values_from_backtrace(i32* %9)
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}

declare dso_local i32 @sodium_remove_param_values_from_backtrace(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
